--- a/app/flowvahub_rewards/src/index.css
+++ b/app/flowvahub_rewards/src/index.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap');
 @import "tailwindcss";
+
+* {
+  font-family: "Google Sans", sans-serif;
+}
+
 @keyframes scaleIn {
   from {
     transform: scale(0.9);
